[project]
name = "bdo-empire"
version = "0.1.3"
description = "Worker empire optimizer for BDO using HiGHS mip solver."
authors = [
    {name = "Thell 'Bo' Fowler", email = "thell@tbfowler.net"},
]

dependencies = [
    "certifi>=2024.8.30",
    "CTkToolTip>=0.8",
    "customtkinter>=5.2.2",
    "highspy>=1.7.2",
    "natsort>=8.4.0",
    "networkx>=3.3",
    "psutil>=6.0.0",
    "pulp>=2.9.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Unlicense"}

[project.scripts]
empire-optimizer = "bdo_empire.main:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
